use toList intead of Collectors.toList()